fixing slider on mobile

--- a/style.css
+++ b/style.css
@@ -97,6 +97,11 @@
     margin: 0 !important;
   }
 
+  @media (max-width: 991px) {
+    .large-header.large-header-has-slider .sy-box {
+      height: auto !important;
+    }
+  }
 
 
 	/* ================================
